Half working version. Timings are still twisted, shall fix soon.

--- a/frame.html
+++ b/frame.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=1265" >
 
 		<script type="text/javascript" src="assets/js/jquery-1.8.3.min.js"></script>
-		<script type="text/javascript" src="data.js"></script>
+		<script type="text/javascript" src="data_processed.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<style type="text/css">
 			html, body {
@@ -169,15 +169,6 @@
 			<div id="container">
 				<img id="map" src="SUJ_map.png" width="1265" height="429">
 				<canvas id="canvas" width="1265" height="429"></canvas>
-				<div class="label" id="stage1" style="left:105px; top:220px; width:160px"></div>
-				<div class="label" id="stage2" style="left:490px; top: 20px; width: 90px; height:46px"></div>
-				<div class="label" id="stage3" style="left:160px; top:335px; width:140px; height:34px"></div>
-				<div class="label" id="stage4" style="left:360px; top:335px; width:140px; height:34px"></div>
-				<div class="label" id="stage5" style="left:530px; top:335px; width:140px; height:34px"></div>
-				<div class="label" id="stage6" style="left:700px; top:335px; width:140px; height:34px"></div>
-				<div class="label" id="stage7" style="left:700px; top:395px; width:140px"></div>
-
-				<div class="label grey" style="left:470px; top:415px;">1. Etage</div>
 			</div>
 			<div id="statistics"></div>
 			<div id="timer"></div>
@@ -270,22 +261,22 @@
 						<div class="hour n" style="left:5520px"></div>
 						<div class="hour b" style="left:5580px"><span>21:00</span></div>
 						<div class="hour n" style="left:5640px"></div>
-						<div class="day b" style="left:   0px"><span>Aufbautag</span></div>
-						<div class="day n" style="left: 360px"><span>Aufbautag</span></div>
-						<div class="day n" style="left: 720px"><span>Aufbautag</span></div>
-						<div class="day n" style="left:1080px"><span>Aufbautag</span></div>
-						<div class="day b" style="left:1440px"><span>Day 1</span></div>
-						<div class="day n" style="left:1800px"><span>Day 1</span></div>
-						<div class="day n" style="left:2160px"><span>Day 1</span></div>
-						<div class="day n" style="left:2520px"><span>Day 1</span></div>
-						<div class="day b" style="left:2880px"><span>Day 2</span></div>
-						<div class="day n" style="left:3240px"><span>Day 2</span></div>
-						<div class="day n" style="left:3600px"><span>Day 2</span></div>
-						<div class="day n" style="left:3960px"><span>Day 2</span></div>
-						<div class="day b" style="left:4320px"><span>Day 3</span></div>
-						<div class="day n" style="left:4680px"><span>Day 3</span></div>
-						<div class="day n" style="left:5040px"><span>Day 3</span></div>
-						<div class="day n" style="left:5400px"><span>Day 3</span></div>
+						<div class="day b" style="left:   0px"><span>24th October</span></div>
+						<div class="day n" style="left: 360px"><span>24th October</span></div>
+						<div class="day n" style="left: 720px"><span>24th October</span></div>
+						<div class="day n" style="left:1080px"><span>24th October</span></div>
+						<div class="day b" style="left:1440px"><span>25th October</span></div>
+						<div class="day n" style="left:1800px"><span>25th October</span></div>
+						<div class="day n" style="left:2160px"><span>25th October</span></div>
+						<div class="day n" style="left:2520px"><span>25th October</span></div>
+						<div class="day b" style="left:2880px"><span>26th October</span></div>
+						<div class="day n" style="left:3240px"><span>26th October</span></div>
+						<div class="day n" style="left:3600px"><span>26th October</span></div>
+						<div class="day n" style="left:3960px"><span>26th October</span></div>
+						<div class="day b" style="left:4320px"><span>27th October</span></div>
+						<div class="day n" style="left:4680px"><span>27th October</span></div>
+						<div class="day n" style="left:5040px"><span>27th October</span></div>
+						<div class="day n" style="left:5400px"><span>27th October</span></div>
 					</div>
 				</div>
 				<div class="marker"></div>
