Final-ish demo, with decent results now

--- a/frame.html
+++ b/frame.html
@@ -181,8 +181,23 @@
 
 				<div id="sliderWrapper">
 					<div id="sliderInner">
-						<div class="hour n" style="left:900px"><span>15:00</span></div>
-						<div class="hour b" style="left:960px"></div>
+						<div class="hour b" style="left:0px"><span>0:00</span></div>
+						<div class="hour n" style="left:60px"></div>
+						<div class="hour n" style="left:120px"></div>
+						<div class="hour b" style="left:180px"><span>3:00</span></div>
+						<div class="hour n" style="left:240px"></div>
+						<div class="hour n" style="left:300px"></div>
+						<div class="hour b" style="left:360px"><span>6:00</span></div>
+						<div class="hour n" style="left:420px"></div>
+						<div class="hour n" style="left:480px"></div>
+						<div class="hour b" style="left:540px"><span>9:00</span></div>
+						<div class="hour n" style="left:600px"></div>
+						<div class="hour n" style="left:660px"></div>
+						<div class="hour b" style="left:720px"><span>12:00</span></div>
+						<div class="hour n" style="left:780px"></div>
+						<div class="hour n" style="left:840px"></div>
+						<div class="hour b" style="left:900px"><span>15:00</span></div>
+						<div class="hour n" style="left:960px"></div>
 						<div class="hour n" style="left:1020px"></div>
 						<div class="hour b" style="left:1080px"><span>18:00</span></div>
 						<div class="hour n" style="left:1140px"></div>
@@ -261,22 +276,22 @@
 						<div class="hour n" style="left:5520px"></div>
 						<div class="hour b" style="left:5580px"><span>21:00</span></div>
 						<div class="hour n" style="left:5640px"></div>
-						<div class="day b" style="left:   0px"><span>24th October</span></div>
-						<div class="day n" style="left: 360px"><span>24th October</span></div>
-						<div class="day n" style="left: 720px"><span>24th October</span></div>
-						<div class="day n" style="left:1080px"><span>24th October</span></div>
-						<div class="day b" style="left:1440px"><span>25th October</span></div>
-						<div class="day n" style="left:1800px"><span>25th October</span></div>
-						<div class="day n" style="left:2160px"><span>25th October</span></div>
-						<div class="day n" style="left:2520px"><span>25th October</span></div>
-						<div class="day b" style="left:2880px"><span>26th October</span></div>
-						<div class="day n" style="left:3240px"><span>26th October</span></div>
-						<div class="day n" style="left:3600px"><span>26th October</span></div>
-						<div class="day n" style="left:3960px"><span>26th October</span></div>
-						<div class="day b" style="left:4320px"><span>27th October</span></div>
-						<div class="day n" style="left:4680px"><span>27th October</span></div>
-						<div class="day n" style="left:5040px"><span>27th October</span></div>
-						<div class="day n" style="left:5400px"><span>27th October</span></div>
+						<div class="day b" style="left:   0px"><span>21th October</span></div>
+						<div class="day n" style="left: 360px"><span>21th October</span></div>
+						<div class="day n" style="left: 720px"><span>21th October</span></div>
+						<div class="day n" style="left:1080px"><span>21th October</span></div>
+						<div class="day b" style="left:1440px"><span>22th October</span></div>
+						<div class="day n" style="left:1800px"><span>22th October</span></div>
+						<div class="day n" style="left:2160px"><span>22th October</span></div>
+						<div class="day n" style="left:2520px"><span>22th October</span></div>
+						<div class="day b" style="left:2880px"><span>23th October</span></div>
+						<div class="day n" style="left:3240px"><span>23th October</span></div>
+						<div class="day n" style="left:3600px"><span>23th October</span></div>
+						<div class="day n" style="left:3960px"><span>23th October</span></div>
+						<div class="day b" style="left:4320px"><span>24th October</span></div>
+						<div class="day n" style="left:4680px"><span>24th October</span></div>
+						<div class="day n" style="left:5040px"><span>24th October</span></div>
+						<div class="day n" style="left:5400px"><span>24th October</span></div>
 					</div>
 				</div>
 				<div class="marker"></div>
