--- a/frame.html
+++ b/frame.html
@@ -122,7 +122,7 @@
 				position: relative;
 				top: 0px;
 				cursor: pointer;
-				background-image: url(slider.png);
+				//background-image: url(slider.png);
 				background-repeat: no-repeat;
 				background-position: 2px 0px;
 			}
