--- a/frame.html
+++ b/frame.html
@@ -4,9 +4,13 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=1265" >
 
+		<link type="text/css" rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.3.0/rickshaw.min.css">
+
 		<script type="text/javascript" src="assets/js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="data_processed.js"></script>
 		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.3.9/d3.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.3.0/rickshaw.min.js"></script>
 		<style type="text/css">
 			html, body {
 				margin: 0;
@@ -128,7 +132,7 @@
 			}
 			.marker {
 				position: absolute;
-				left: 537px;
+				left: 525px;
 				top: 1px;
 				border-left:  2px solid rgba(128,161,170,0.7);
 				height: 50px;
@@ -186,5 +190,6 @@
 				<div class="marker"></div>
 			</div>
 		</div>
+
 	</body>
 </html>
